--- a/.jshintrc
+++ b/.jshintrc
@@ -30,7 +30,7 @@
     "indent": 4,
 
     // Prohibit use of a variable before it is defined.
-    "latedef": true,
+    "latedef": false,
 
     // Enforce line length to 80 characters
     // "maxlen": 80,
