--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-jshint": "~1.8",
     "gulp-load-plugins": "^0.7.1",
     "gulp-ruby-sass": "0.7",
+    "gulp-scss-lint": "^0.1.4",
     "gulp-size": "^1.1",
     "gulp-uglify": "~1.0",
     "jasmine-expect": "latest",
