--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "browser-sync": "~1.3",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "~0.0.10",
+    "gulp-cached": "^1.0.1",
+    "gulp-jscs": "^1.3.1",
     "gulp-jshint": "~1.8",
     "gulp-load-plugins": "^0.7.1",
+    "gulp-notify": "^2.1.0",
     "gulp-ruby-sass": "0.7",
     "gulp-scss-lint": "^0.1.4",
     "gulp-size": "^1.1",
     "gulp-uglify": "~1.0",
+    "gulp-util": "^3.0.1",
     "jasmine-expect": "latest",
     "jshint-stylish": "~0.4",
     "karma": "latest",
